Navegacion entre componentes

--- a/src/app/contact/pages/contact/contact.component.html
+++ b/src/app/contact/pages/contact/contact.component.html
@@ -1,3 +1,11 @@
-<p>
-  contact works!
-</p>
+<ion-content>
+
+  <app-header></app-header>
+
+  <h1>Contact</h1>
+
+  <app-form-contact></app-form-contact>
+
+  <app-footer></app-footer>
+
+</ion-content>
