--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -1,9 +1,11 @@
 <ion-content>
-  <div style="background:red">
     <app-header></app-header>
+
+    <h1>Home</h1>
+
     <app-article></app-article>
+
     <app-footer></app-footer>
 
-  </div>
 </ion-content>
 
