--- a/src/app/store/components/product-detail/product-detail.component.html
+++ b/src/app/store/components/product-detail/product-detail.component.html
@@ -1,3 +1,11 @@
-<p>
-  product-detail works!
-</p>
+<div class="producto">
+  <div>
+    <h3>Titulo del producto</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur ea officia, reprehenderit facere tenetur ad
+      ab iusto dolorum quis sapiente architecto debitis beatae saepe. Cupiditate consectetur consequuntur eaque optio
+      cumque!</p>
+  </div>
+  <div style="text-align: end">
+    <button [routerLink]="['/store/item']" routerLinkActive="router-link-active" >view details</button>
+  </div>
+</div>>
