--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,11 @@
-<div class="footer">
+<!-- <div class="footer">
   <h3>Footer</h3>
+</div> -->
+
+<div class="footer">
+  <!-- <a class="option-menu" href="/store/home">Store</a> -->
+
+  <button [routerLink]="['/store/home']" class="option-menu">Store</button>
+  <button [routerLink]="['/']" class="option-menu">Home</button>
+  <button [routerLink]="['/contact']" class="option-menu">Contact</button>
 </div>
