--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,9 +3,18 @@
   bottom: 0px;
   width: 100%;
   border-top: 1px solid black;
+  display: flex;
+  justify-content: center;
 }
 
 .h3 {
   text-align: center;
   font-style: italic;
+}
+
+.option-menu {
+  padding: 5px 10px;
+  margin: 0px 10px;
+  border: 1px solid #03A9F4;
+  background-color: #b3d1e8;
 }
