--- a/src/app/shared/pages/not-found/not-found.component.html
+++ b/src/app/shared/pages/not-found/not-found.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div style="text-align: center;">
-      <button class="botton-back">regresar</button>
+      <button class="botton-back" [routerLink]="['/']" >regresar</button>
     </div>
 
   </div>
