--- a/src/app/store/pages/product/product.component.html
+++ b/src/app/store/pages/product/product.component.html
@@ -1,3 +1,11 @@
-<p>
-  product works!
-</p>
+<ion-content>
+
+<app-header></app-header>
+
+<button class="back"[routerLink]="['/store/home']" >back</button>
+
+<h1>Product</h1>
+
+<app-footer></app-footer>
+
+</ion-content>
